--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/BurlingtonCodeAcademy/zorkington.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "John Isabella",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/BurlingtonCodeAcademy/zorkington/issues"
